--- a/src/components/playVideo.css
+++ b/src/components/playVideo.css
@@ -51,8 +51,9 @@
 
 @media (max-width: 490px) {
   .video {
-    width: 280px;
+    width: 96vw;
     height: 250px;
+    margin: 0rem 0rem;
   }
   .videoBtn {
     width: 20px !important;
@@ -64,7 +65,7 @@
     justify-content: center;
     align-items: center;
     color: rgb(190, 190, 190);
-    margin: 0rem 0px;
+    margin: 0px 6px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
     font-weight: 600;
@@ -75,6 +76,9 @@
   }
   .videoBtnclip {
     display: none;
+  }
+  .desc {
+    font-size: smaller;
   }
 }
 
