--- a/src/components/recommended.css
+++ b/src/components/recommended.css
@@ -1,7 +1,19 @@
 .thumbnail {
   width: 100%;
-  height: 180px;
+  height: 240px;
   object-fit: cover;
+}
+a {
+  text-decoration: none;
+  color: white;
+}
+.author {
+  text-align: center;
+  margin: 2rem 0rem 2rem 16rem;
+}
+.author:hover {
+  text-decoration: underline;
+  color: red;
 }
 .recommendations {
   display: flex;
@@ -16,17 +28,16 @@
   margin: 1rem;
 }
 .recommended {
-  width: 300px;
+  width: 350px;
   height: auto;
-  margin: 2rem 2rem;
+  margin: 1rem 2rem 3rem 2rem;
 
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: all 0.1s linear;
-}
-.recommended:hover {
   transform: scale(1.1);
 }
+
 .video_verify {
   margin-left: 1rem;
 }
@@ -52,14 +63,20 @@
   margin: 0.2rem 0rem;
   line-height: 1.2rem;
 }
-.moreIcon {
-  margin: 0.2rem 0rem;
+.moreIcon2 {
+  position: absolute;
+  right: 0;
+  top: 2;
+  margin-left: 1rem;
 }
 .channel__name {
   margin: 0rem 1rem 0.1rem 0rem;
 }
 .channel__name {
   font-weight: 500;
+}
+.video__views {
+  color: rgb(219, 214, 214);
 }
 .verifiedIcon {
   width: 15px !important;
@@ -80,6 +97,11 @@
   .recommended__heading {
     font-size: 1.2rem;
     margin-bottom: -1.5rem;
+  }
+}
+@media (max-width: 560px) {
+  .author {
+    margin: 2rem 0rem 2rem 12rem;
   }
 }
 
