--- a/src/components/searchPage.css
+++ b/src/components/searchPage.css
@@ -4,6 +4,9 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+.error {
+  margin-top: 4rem;
+}
 .searchedInfo {
   display: flex;
 }
@@ -41,9 +44,7 @@
   object-fit: cover;
   border-radius: 50%;
 }
-.video {
-  transition: all 0.2s linear;
-}
+
 .views_on_video {
   color: gray;
   margin-left: 2.5rem;
@@ -54,19 +55,22 @@
   top: 1rem;
   left: 0.6rem;
 }
+.uploadTime {
+  margin-left: 1rem;
+}
+.ChannelName {
+  margin: 0.2rem 0rem;
+  font-size: 1rem;
+}
 @media (max-width: 490px) {
-  .video {
-    width: 280px;
-    height: 250px;
+  .searchedVideos {
+    display: flex;
+    flex-direction: column;
   }
+
   .video_thumbnail {
-    width: 80px;
-    height: 100px;
-    object-fit: cover;
-  }
-  .video_thumbnail {
-    width: 110px;
-    height: 100px;
+    width: 95vw;
+    height: 200px;
     object-fit: cover;
   }
   .searchedVideos {
@@ -78,7 +82,7 @@
   }
 
   .views_on_video {
-    font-size: 10px;
+    font-size: 13px;
     margin-left: 1rem;
   }
   .ChannelName {
@@ -120,19 +124,12 @@
     height: 200px;
     object-fit: cover;
   }
-  .video {
-    width: 550px;
-    height: 400px;
-  }
+
   .video_title {
     margin-top: 1rem;
   }
 }
 @media (min-width: 768px) {
-  .video {
-    width: 600px;
-    height: 400px;
-  }
   .ChannelName {
     margin-left: 2.5rem;
   }
@@ -154,9 +151,5 @@
 
   .video_title {
     margin-top: 2rem;
-  }
-  .video {
-    width: 900px;
-    height: 450px;
   }
 }
